force-app/main/default/objects/CustomObjectB__c/CustomObjectB__c.object-meta.xml
<CustomObject>
    <label>カスタムオブジェクトB</label>
    <nameField>
        <label>名前</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>