force-app/main/default/objects/CustomObjectB__c/fields/CustomObjectA__c.field-meta.xml
<CustomField>
    <fullName>CustomObjectA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>カスタムオブジェクトA</label>
    <referenceTo>CustomObjectA__c</referenceTo>
    <relationshipLabel>カスタムオブジェクトB</relationshipLabel>
    <relationshipName>CustomObjectB</relationshipName>
    <type>Lookup</type>
</CustomField>