force-app/main/default/objects/CustomObjectB__c/fields/History__c.field-meta.xml
<CustomField>
    <fullName>History__c</fullName>
    <label>履歴</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>