force-app/main/default/objects/CustomObjectB__c/fields/referCusAText__c.field-meta.xml
<CustomField>
    <fullName>referCusAText__c</fullName>
    <formula>&quot; a&quot; &amp; CustomObjectA__r.Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>カスタムオブジェクトAのテキストを参照</label>
    <type>Text</type>
</CustomField>