force-app/main/default/objects/CustomObjectB__c/validationRules/N45273909.validationRule-meta.xml
<ValidationRule>
    <fullName>N45273909</fullName>
    <active>false</active>
    <errorConditionFormula>00N5i00000Jaeva.00N5i00000JakPq</errorConditionFormula>
    <errorMessage>45273909</errorMessage>
</ValidationRule>